Issue #536 Fix 2FA link on sidebar not visible on mobile

--- a/app/styles/pages/common/_common-sidebar-left.scss
+++ b/app/styles/pages/common/_common-sidebar-left.scss
@@ -247,7 +247,7 @@ body:not(.sw-toggled) #sidebar {
     border-bottom: solid 2px #eee;
   }
   &.profile-disp-links {
-    height: 92px;
+    height: 138px;
     position: relative;
     z-index: 1;
   }
